GH-848: Housekeeping. Preparing for RBAC model introduction